--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title_separator: "-"
 name: "Thomas Vogel"
 description: "Personal Website."
 url: "https://thomas-vogel.github.io"
-baseurl: #"/mypage"
+# baseurl: #"/mypage"
 repository: "thomas-vogel/thomas-vogel.github.io"
 twitter: "https://twitter.com/tomvog"
 twitter_handle: "@tomvog"
