--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - title: Home
   url: /
 - title: Research
-  url: /research/
+  url: /research
 - title: Publications
   url: /publications/
 - title: Professional Activities
-  url: /activities/
+  url: /activities
