Update css; copy reset and config css to the main file.

--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ include:
 exclude: ["README.md", "LICENSE"]
 
 
-# Sass
-sass:
-  style: :compressed
-  sass_dir: _sass
+## Sass
+# sass:
+#  style: :compressed
+#  sass_dir: _sass
 
 
 # Markdown
