--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale: "en"
 title: "Thomas Vogel"
 title_separator: "-"
 name: "Thomas Vogel"
-description: "Personal Website."
+description: "Personal Website of Thomas Vogel."
 url: "https://thomas-vogel.github.io"
 # baseurl: #"/mypage"
 repository: "thomas-vogel/thomas-vogel.github.io"
