Change layout and address and add publications by type.

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ locale: "en"
 title: "Thomas Vogel"
 title_separator: "-"
 name: "Thomas Vogel"
+email: "&lt;firstname&gt;.&lt;surname&gt; [at] informatik.hu-berlin.[de]"
 description: "Personal Website of Thomas Vogel."
 url: "https://thomas-vogel.github.io"
 # baseurl: #"/mypage"
