switch to publicationn by type as default

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@
 - title: Research
   url: /research
 - title: Publications
-  url: /publications/
+  url: /publications/type
 - title: Professional Activities
   url: /activities
