--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale: "en"
 title: "Thomas Vogel"
 title_separator: "-"
 name: "Thomas Vogel"
-email: "&lt;firstname&gt;.&lt;surname&gt; [at] informatik.hu-berlin.de"
+email: "&lt;firstname&gt;.&lt;surname&gt;@informatik.hu-berlin.de"
 description: "Personal Website of Thomas Vogel, Software Engineering Researcher at Humboldt University Berlin, Germany."
 url: "https://thomas-vogel.github.io"
 # baseurl: #"/mypage"
