--- a/_data/websites.yml
+++ b/_data/websites.yml
@@ -1,5 +1,2 @@
-- name: Gif-Giving
-  url: http://gif-giving.com
-
-- name: Sheri Koetting
-  url: http://sherikoetting.com
+- name: HU Berlin
+  url: https://www.hu-berlin.de
