Add mRUBiS artifact published at DARTS.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@
 - title: Research
   url: /research
 - title: Publications
-  url: /publications/type
+  url: /publications
 - title: Professional Activities
   url: /activities
