Add SEfIAS report, update news, enable : in page titles using html code.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@
   url: /research
 - title: Publications
   url: /publications
-- title: Professional Activities
+- title: Activities
   url: /activities
