--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: "Thomas Vogel"
 title_separator: "-"
 name: "Thomas Vogel"
 email: "thomas.vogel (at) informatik.hu-berlin.de"
-description: "Personal Website of Thomas Vogel, Software Engineering Researcher at Humboldt University Berlin, Germany."
+description: "Personal Website of Thomas Vogel, Stand-in Professor for Empirical Software Engineering at Paderborn University, Germany, and Software Engineering Researcher at Humboldt University Berlin, Germany."
 url: "https://thomas-vogel.github.io"
 # baseurl: #"/mypage"
 repository: "thomas-vogel/thomas-vogel.github.io"
