Add 2023-CS&P-BOOK and update mastodon account info.

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ url: "https://thomas-vogel.github.io"
 repository: "thomas-vogel/thomas-vogel.github.io"
 twitter: "https://twitter.com/tomvog"
 twitter_handle: "@tomvog"
-mastodon: "https://fediscience.org/@tomvog"
-mastodon_handle: "fediscience.org/@tomvog"
+mastodon: "https://mastodon.acm.org/@tomvog"
+mastodon_handle: "@tomvog@mastodon.acm.org"
 
 # File management
 include:
