--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
   url: /
 - title: Research
   url: /research
+- title: Projects
+  url: /projects
 - title: Publications
   url: /publications
 - title: Activities
