Restructure and update 1st page.

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ locale: "en"
 title: "Thomas Vogel"
 title_separator: "-"
 name: "Thomas Vogel"
-email: "thomas.vogel (at) informatik.hu-berlin.de"
-description: "Personal Website of Thomas Vogel, Software Engineering Researcher at Humboldt University Berlin, Germany."
+email: "thomas.vogel@informatik.hu-berlin.de"
+description: "Personal Website of Thomas Vogel, Software Engineering Researcher at Humboldt University Berlin, Germany. Thomas does research on testing software and engineering autonomous and self-adaptive systems."
 url: "https://thomas-vogel.github.io"
 # baseurl: #"/mypage"
 repository: "thomas-vogel/thomas-vogel.github.io"
@@ -17,6 +17,12 @@ twitter: "https://twitter.com/tomvog"
 twitter_handle: "@tomvog"
 mastodon: "https://mastodon.acm.org/@tomvog"
 mastodon_handle: "@tomvog@mastodon.acm.org"
+bluesky: "https://bsky.app/profile/tomvog.bsky.social"
+bluesky_handle: "@tomvog.bsky.social"
+linkedin: "https://www.linkedin.com/in/thvogel"
+linkedin_handle: "thvogel"
+github: "https://github.com/thomas-vogel"
+github_handle: "thomas-vogel"
 
 # File management
 include:
